Fix display and layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1584,8 +1584,8 @@ input, select, textarea {
 			background-color: rgba(95, 45, 93, 0.404);
 			border-radius: 4px;
 			opacity: 0;
-  			overflow-y: auto;    /* Add this to enable scrolling */
-   			max-height: 90vh;    /* Add this to prevent overflow */
+   			max-height: 100%;
+			
 		}
 
 			#main article.active {
@@ -1640,6 +1640,9 @@ input, select, textarea {
 
 			#main article {
 				padding: 3.5rem 1rem 0.5rem 1rem ;
+				width: 100%;
+       			margin: 0;
+        		min-height: 0;
 			}
 
 				#main article .close:before {
@@ -1675,10 +1678,14 @@ input, select, textarea {
 
 		#footer .copyright {
 			letter-spacing: 0.2rem;
-			font-size: 0.6rem;
+			font-size: 0.8rem;
 			opacity: 0.75;
 			margin-bottom: 0;
 			text-transform: uppercase;
+		}
+
+		#footer .icon.brands:before {
+   			font-size: 1rem;  
 		}
 
 		body.is-article-visible #footer {
